# yulita-backend

./: .gitignore  pyproject.toml
src/: .env  db.sqlite3
src/api/v1/: urls.py
src/api/v1/crm/: routers.py  views.py
src/api/v1/user/: views.py
src/apps/clothing_model/: apps.py  models.py  serializers.py  views.py
src/apps/user/: models.py  serializers.py
src/apps/users/: managers.py  models.py
src/config/: settings.py  urls.py
